# zv-mcp-atlassian

./: .mcp-release.toml  SECURITY.md  pyproject.toml
release/: README.md  pyproject.toml
scripts/: sync-python-release.py
