[project]
name = "release-mcp-atlassian"
version = "0.0.1+release.2"
description = "MCP Atlassian (empaquetado release/, instalable via uvx)"
requires-python = ">=3.10"
dependencies = [
  "atlassian-python-api>=4.0.0",
  "requests[socks]>=2.31.0",
  "beautifulsoup4>=4.12.3",
  "httpx>=0.28.0",
  "mcp>=1.8.0,<2.0.0",
  "fastmcp>=2.13.0,<2.15.0",
  "fakeredis>=2.32.1,<2.35.0",
  "python-dotenv>=1.0.1",
  "markdownify>=0.11.6",
  "markdown>=3.7.0",
  "markdown-to-confluence>=0.3.4,<0.4.0",
  "pydantic>=2.10.6,<3.0",
  "trio>=0.29.0",
  "click>=8.1.7",
  "uvicorn>=0.27.1",
  "starlette>=0.49.1",
  "urllib3>=2.6.3",
  "thefuzz>=0.22.1",
  "python-dateutil>=2.9.0.post0",
  "types-python-dateutil>=2.9.0.20241206",
  "keyring>=25.6.0",
  "cachetools>=5.0.0",
  "types-cachetools>=5.5.0.20240820",
  "unidecode>=1.3.0",
  "truststore>=0.10.0",
  "tzdata>=2024.1; platform_system=='Windows'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-atlassian = "mcp_atlassian:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_atlassian"]
